--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "🐻's Florida",
   "display": "minimal-ui",
   "start_url": "/",
-  "theme_color": "#5af5fa",
+  "theme_color": "#341e80",
   "background_color": "#432468",
   "icons": [
     {
